@@ -1,3 +1,8 @@
+2012-12-02  Borut Razem  <borutr@users.sourceforge.net>
+  * gpasm/list.c: added info about amount of free program memory to the
+    listing
+  * gpasm/macro.c, gpasm/gpasm.c: fixed warnings
+
 2012-12-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * libgputils/gpprocessor.c: Minor correction of prog_mem_size.
 
